syntax = "proto3";
package choraio.chora.ecodex;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "ecodex/denomTrace.proto";
import "ecodex/slog.proto";
import "ecodex/buyOrderBook.proto";
import "ecodex/sellOrderBook.proto";

option go_package = "github.com/choraio/chora/x/ecodex/types";

// Query defines the gRPC querier service.
service Query {
	// this line is used by starport scaffolding # 2
	rpc DenomTrace(QueryGetDenomTraceRequest) returns (QueryGetDenomTraceResponse) {
		option (google.api.http).get = "/choraio/chora/ecodex/denomTrace/{index}";
	}
	rpc DenomTraceAll(QueryAllDenomTraceRequest) returns (QueryAllDenomTraceResponse) {
		option (google.api.http).get = "/choraio/chora/ecodex/denomTrace";
	}

	rpc Slog(QueryGetSlogRequest) returns (QueryGetSlogResponse) {
		option (google.api.http).get = "/choraio/chora/chora/slog/{id}";
	}
	rpc SlogAll(QueryAllSlogRequest) returns (QueryAllSlogResponse) {
		option (google.api.http).get = "/choraio/chora/chora/slog";
	}

	rpc BuyOrderBook(QueryGetBuyOrderBookRequest) returns (QueryGetBuyOrderBookResponse) {
		option (google.api.http).get = "/choraio/chora/ecodex/buyOrderBook/{index}";
	}
	rpc BuyOrderBookAll(QueryAllBuyOrderBookRequest) returns (QueryAllBuyOrderBookResponse) {
		option (google.api.http).get = "/choraio/chora/ecodex/buyOrderBook";
	}

	rpc SellOrderBook(QueryGetSellOrderBookRequest) returns (QueryGetSellOrderBookResponse) {
		option (google.api.http).get = "/choraio/chora/ecodex/sellOrderBook/{index}";
	}
	rpc SellOrderBookAll(QueryAllSellOrderBookRequest) returns (QueryAllSellOrderBookResponse) {
		option (google.api.http).get = "/choraio/chora/ecodex/sellOrderBook";
	}
}

// this line is used by starport scaffolding # 3
message QueryGetDenomTraceRequest {
	string index = 1;
}

message QueryGetDenomTraceResponse {
	DenomTrace DenomTrace = 1;
}

message QueryAllDenomTraceRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDenomTraceResponse {
	repeated DenomTrace DenomTrace = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSlogRequest {
	string id = 1;
}

message QueryGetSlogResponse {
	Slog Slog = 1;
}

message QueryAllSlogRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSlogResponse {
	repeated Slog Slog = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetBuyOrderBookRequest {
	string index = 1;
}

message QueryGetBuyOrderBookResponse {
	BuyOrderBook BuyOrderBook = 1;
}

message QueryAllBuyOrderBookRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBuyOrderBookResponse {
	repeated BuyOrderBook BuyOrderBook = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSellOrderBookRequest {
	string index = 1;
}

message QueryGetSellOrderBookResponse {
	SellOrderBook SellOrderBook = 1;
}

message QueryAllSellOrderBookRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSellOrderBookResponse {
	repeated SellOrderBook SellOrderBook = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
